2013-06-22  Per Bothner  <per@bothner.com>

	* CompilationHelpers.java (validateIsEqv): Similar optimization
	as compileNumberCompare below.

2013-06-20  Per Bothner  <per@bothner.com>

	* CompileMisc.java (compileNumberCompare): If we can't optimize based
	on type information, call $Ls, $Eq et methods directly.
	These return boolean, rather than Object, avoiding boxing.

2013-06-09  Per Bothner  <per@bothner.com>

	* Apply.java (getArguments): Fix off-by-one error in optimization
	of Object[] - noted by Jamison Hope.
	Add support for primitive arrays.

2013-05-11  Per Bothner  <per@bothner.com>

	* Format.java (formatToWriter): Use ParseFormat.asFormat rather than
	apply1.

2013-03-18  Per Bothner  <per@bothner.com>

	* ParseFormat.java (parseFormat): Fix some missing read calls
	when handling '*' for width and precision.
	Provide a reasonable implementation of %f, %e, and %g formats
	using LispRealFormat instead of falling back to ObjectFormat.
	* LispFormat.java (class LispRealFormat): Move to new file, because it
	now also used by printf-style "%g" format.
	(<init>): In the LispRealFormat case fix bug that assumed
	dfmt.argsUsed is set at this point.  Instead, always calls resolve
	to set it.
	* LispRealFormat.java: New file.
	(<init>): We can't argsUsed here, since arg1...arg7 aren't set yet.
	* Makefile.am: Update accoringly.
	* Format.java (sprintfToString): New static method.

2013-03-04  Per Bothner  <per@bothner.com>

	* ObjectFormat.java (format): Generalize to write to Appendable.
	* LispFormat.java: Likewise.

2013-02-24  Per Bothner  <per@bothner.com>

	* Curry1.java: New class, extends Procedure.
	* CurryExp.java: New class, extends ApplyExp.
	* Makefile.am: Update accordingly.

2013-01-20  Per Bothner  <per@bothner.com>

	* DisplayFormat.java (writeObjectRaw): Special handling for symbols
	whose prefix is $construct$ or $entity$ - write prefix without URI.

2012-12-22  Per Bothner  <per@bothner.com>
