@@ -1,3 +1,7 @@
+2013-06-29  Per Bothner  <per@bothner.com>
+
+	* misc.test.scm: Add some tests for non-canonical Booleans.
+
 2013-06-28  John Cowan  <cowan@mercury.ccil.org>
 	    Per Bothner  <per@bothner.com>
 
