@@ -1,3 +1,8 @@
+2013-06-29  Per Bothner  <per@bothner.com>
+
+	* IsEqv.java (apply): If types are Boolean, compare like equal?.
+	* CompilationHelpers.java (numNumeric): Add Boolean constants.
+
 2013-06-22  Per Bothner  <per@bothner.com>
 
 	* CompilationHelpers.java (validateIsEqv): Similar optimization
